k8/aws-xray.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xray

---
apiVersion: v1
kind: Service
metadata:
  name: xray-service
  namespace: xray
spec:
  selector:
    app: xray-daemon
  ports:
    - name: xray-ingest
      port: 2000
      protocol: UDP

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: xray-daemon
  namespace: xray
spec:
  selector:
    matchLabels:
      app: xray-daemon
  template:
    metadata:
      labels:
        app: xray-daemon
    spec:
      serviceAccountName: xray-daemon-sa #
      containers:
        - name: xray-daemon
          image: public.ecr.aws/xray/aws-xray-daemon:latest
          ports:
            - name: xray-ingest
              containerPort: 2000
              protocol: UDP
          resources:
            requests:
              cpu: 256m
              memory: 32Mi
