k8/socket-io.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-sockets
  annotations:
    # Enable sticky sessions
    nginx.ingress.kubernetes.io/affinity: "cookie"

    # Name the cookie (you can name this whatever you like)
    nginx.ingress.kubernetes.io/session-cookie-name: "socket-sticky-cookie"

    # Set cookie expiration (e.g., 86400 seconds = 1 day)
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"

    # Prevents connections from dropping too quickly if idle
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: www.jawsight.online
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
